[package]
name = "ocean"
version = "0.1.0"
authors = ["jdiazcano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
build_system = { path = "../build_system", version = "0.1.0" }
gradle-build-system = { path = "../gradle", version = "0.1.0" }
rust-build-system = { path = "../rust", version = "0.1.0" }
maven-build-system = { path = "../maven", version = "0.1.0" }

# Cli
clap = "3.0.0-beta.1"
colored = "2.0.0"

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

dirs = "3.0.1"
whoami = "0.9.0"